--- a/app/src/main/res/drawable/puzzle_background.xml
+++ b/app/src/main/res/drawable/puzzle_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
             <size android:width="257dp"/>
@@ -8,4 +8,4 @@
             <corners android:radius="4dp"/>
         </shape>
     </item>
-</selector>
+</layer-list>
