--- a/app/src/main/res/layout/fragment_solver.xml
+++ b/app/src/main/res/layout/fragment_solver.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.fragments.SolverFragment">
 
     <ImageView
         android:id="@+id/solver_background"
@@ -18,14 +20,14 @@
         android:id="@+id/solver_tile1"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile2"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile2"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintStart_toStartOf="@+id/solver_background"
@@ -35,13 +37,14 @@
         android:id="@+id/solver_tile2"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile3"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile3"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintStart_toEndOf="@+id/solver_tile1"
@@ -51,14 +54,14 @@
         android:id="@+id/solver_tile3"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile4"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile4"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintEnd_toEndOf="@+id/solver_background"
@@ -68,13 +71,14 @@
         android:id="@+id/solver_tile4"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="1dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile5"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile5"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintStart_toStartOf="@+id/solver_background"
@@ -84,12 +88,14 @@
         android:id="@+id/solver_tile5"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile6"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile6"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintStart_toEndOf="@+id/solver_tile1"
@@ -99,13 +105,14 @@
         android:id="@+id/solver_tile6"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile7"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile7"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintEnd_toEndOf="@+id/solver_background"
@@ -115,14 +122,14 @@
         android:id="@+id/solver_tile7"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
-        android:nextFocusForward="@id/solver_tile8"
         android:inputType="number"
+        android:nextFocusForward="@id/solver_tile8"
         android:textAlignment="center"
         android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/solver_background"
@@ -132,14 +139,15 @@
         android:id="@+id/solver_tile8"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
         android:imeOptions="actionNext"
+        android:inputType="number"
         android:nextFocusForward="@id/solver_tile9"
         android:textAlignment="center"
-        android:inputType="number"
         android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/solver_background"
         app:layout_constraintStart_toEndOf="@+id/solver_tile7" />
@@ -148,8 +156,8 @@
         android:id="@+id/solver_tile9"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/number_tile_background"
         android:ems="10"
         android:hint="0"
@@ -178,21 +186,24 @@
         android:id="@+id/solver_solve_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="80dp"
         android:background="@color/colorPrimaryLight"
         android:text="@string/solve"
         android:textAllCaps="false"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/solver_background" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/solver_reset_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/solver_reset_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="80dp"
         android:background="@color/colorPrimaryLight"
         android:text="@string/reset"
         android:textAllCaps="false"
@@ -200,8 +211,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/solver_solve_button"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/solver_solve_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
