--- a/app/src/main/res/layout/item_tile.xml
+++ b/app/src/main/res/layout/item_tile.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tile_layout_number"
+        android:id="@+id/number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/number_tile_background"
