--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/puzzle_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_step_counter" />
+        app:layout_constraintTop_toBottomOf="@+id/step_counter" />
 
     <TextView
         android:id="@+id/tile_6"
