--- a/app/src/main/res/menu/bottom_main_menu.xml
+++ b/app/src/main/res/menu/bottom_main_menu.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/bottom_nav_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/baseline_home_black_24dp"
         android:title="@string/home" />
     <item
-        android:id="@+id/bottom_nav_solver"
+        android:id="@+id/solverFragment"
         android:icon="@drawable/baseline_extension_black_24dp"
         android:title="@string/solver" />
 
     <item
-        android:id="@+id/bottom_nav_info"
+        android:id="@+id/infoFragment"
         android:icon="@drawable/baseline_help_black_24dp"
         android:title="@string/help" />
 
