--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TileGridView">
+        <item name="android:layout_width">242dp</item>
+        <item name="android:layout_height">242dp</item>
+        <item name="android:numColumns">3</item>
+        <item name="android:horizontalSpacing">1dp</item>
+        <item name="android:verticalSpacing">1dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
 </resources>
