--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,4 +25,32 @@
 <!--        android:name="com.example.cool8puzzle.ui.fragments.SolverFragment"-->
 <!--        android:label="fragment_solver"-->
 <!--        tools:layout="@layout/fragment_solver" />-->
+    <fragment
+        android:id="@+id/homeFragment2"
+        android:name="com.example.cool8puzzle.ui.fragments.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/solverFragment2"
+        android:name="com.example.cool8puzzle.ui.fragments.SolverFragment"
+        android:label="fragment_solver"
+        tools:layout="@layout/fragment_solver" >
+        <action
+            android:id="@+id/action_solverFragment2_to_solverStepsFragment"
+            app:destination="@id/solverStepsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/infoFragment2"
+        android:name="com.example.cool8puzzle.ui.fragments.InfoFragment"
+        android:label="fragment_info"
+        tools:layout="@layout/fragment_info" />
+    <fragment
+        android:id="@+id/solverStepsFragment"
+        android:name="com.example.cool8puzzle.ui.fragments.SolverStepsFragment"
+        android:label="fragment_solver_steps"
+        tools:layout="@layout/fragment_solver_steps" >
+        <argument
+            android:name="puzzle"
+            app:argType="string" />
+    </fragment>
 </navigation>
