--- a/app/src/main/res/layout/item_solver_step.xml
+++ b/app/src/main/res/layout/item_solver_step.xml
@@ -6,44 +6,44 @@
 
 
     <ImageView
-        android:id="@+id/solver_list_step_background"
+        android:id="@+id/background"
         android:layout_width="260dp"
         android:layout_height="260dp"
         android:layout_marginBottom="24dp"
         android:src="@drawable/puzzle_background"
-        app:layout_constraintBottom_toTopOf="@+id/solver_list_step_line"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <GridView
-        android:id="@+id/solver_list_step_gridview"
+        android:id="@+id/gridview"
         android:layout_width="242dp"
         android:layout_height="242dp"
         android:background="@drawable/puzzle_background"
         android:numColumns="3"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/solver_list_step_background"
-        app:layout_constraintEnd_toEndOf="@+id/solver_list_step_background"
-        app:layout_constraintStart_toStartOf="@+id/solver_list_step_background"
-        app:layout_constraintTop_toTopOf="@+id/solver_list_step_background">
+        app:layout_constraintBottom_toBottomOf="@+id/background"
+        app:layout_constraintEnd_toEndOf="@+id/background"
+        app:layout_constraintStart_toStartOf="@+id/background"
+        app:layout_constraintTop_toTopOf="@+id/background">
 
     </GridView>
 
     <TextView
-        android:id="@+id/solver_list_step_movement"
+        android:id="@+id/movement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="24dp"
         android:text="Step 0: Move 0 down"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/solver_list_step_background"
+        app:layout_constraintBottom_toTopOf="@+id/background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/solver_list_step_line"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginStart="24dp"
