--- a/app/src/main/res/layout/fragment_solver.xml
+++ b/app/src/main/res/layout/fragment_solver.xml
@@ -134,31 +134,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="128dp"
         android:background="@color/colorPrimaryLight"
         android:text="@string/solve"
         android:textAllCaps="false"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reset_button"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/solver_background" />
 
     <Button
         android:id="@+id/reset_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="80dp"
         android:background="@color/colorPrimaryLight"
         android:text="@string/reset"
         android:textAllCaps="false"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/solve_button" />
+        app:layout_constraintStart_toEndOf="@+id/solve_button"
+        app:layout_constraintTop_toBottomOf="@+id/solver_background" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
